# TarViz

./: 0_🌶_Home.py  LICENSE  README.md  pyproject.toml
pages/: 0_🌿_bQTL_View.py  2_🥘_Trait_View.py  4_❓_Priority_View.py
tarviz/: constants.py  prioritisation.ipynb  utils.py  widgets.py
tests/: test_utils.py
tests/nextflow_rundir/: nextflow.config
tests/nextflow_rundir/data/: bqtls.csv
