[tool.poetry]
name = "tarviz"
version = "0.1.0"
description = ""
authors = ["Olivier Labayle <olabayle@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.19.0"
pandas = "^1.5.3"
streamlit-aggrid = "^0.3.4"
watchdog = "^2.3.1"
plotly = "^5.13.1"
pyarrow = "^11.0.0"
streamlit-extras = "^0.2.6"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
